--- a/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
@@ -46,7 +46,7 @@ function shapeFromData(message) {
 }
 \end{lstlisting}
 
-Een derde geval is dat er geen shape bestaat binnen Kinetic, zo heeft Kinetic wel een \inlinecode{Kinetic.Wedge} (Nederlands ``taartpuntje''), maar geen arc (een stuk van een cirkel). Daartoe zal Kinetic uitgebreid moeten worden met ons primitieve. Omdat Javascript een prototypegebaseerde taal is kunnen we \inlinecode{Kinetic.Shape} uitbreiden tot onze eigen \inlinecode{CanvasHs.Arc}, daartoe bied Kinetic ons de \inlinecode{Kinetic.Util.extend} functie aan. Verder dienen we een constructor te maken voor ons object, onze superklasse aanroepen, en de tekenfunctie naar onszelf laten verwijzen.
+Een derde geval is dat er geen shape bestaat binnen Kinetic, zo heeft Kinetic.JS wel een \inlinecode{Kinetic.Wedge} (Nederlands ``taartpuntje''), maar geen arc (een stuk van een cirkel). Daartoe zal Kinetic.JS uitgebreid moeten worden met ons primitieve. Omdat Javascript een prototypegebaseerde taal is kunnen we \inlinecode{Kinetic.Shape} uitbreiden tot onze eigen \inlinecode{CanvasHs.Arc}, daartoe bied Kinetic.JS ons de \inlinecode{Kinetic.Util.extend} functie aan. Verder dienen we een constructor te maken voor ons object, onze superklasse aanroepen, en de tekenfunctie naar onszelf laten verwijzen.
 
 \begin{lstlisting}[style=densecode, language=JavaScript]
 // As this is a custom shape, we will define our own namespace
@@ -88,7 +88,7 @@ var CanvasHs = {};
 })();
 \end{lstlisting}
 
-Een paar dingen om hier op te merken, ten eerste wordt er een nieuwe namespace gemaakt, \inlinecode{CanvasHs}, dit is om shapes van Kinetic te scheiden van onze eigen shapes. Daarnaast roepen we in de \inlinecode{___init} functie de constructor van \inlinecode{Kinetic.Shape} aan en voegt de \inlinecode{Kinetic.Util.extend} methode de attributen van het prototype van \inlinecode{Kinetic.Shape} in \inlinecode{CanvasHs.Arc} toe. De laatste twee functieaanroepen zijn om gemakkelijk getters en setters toe te voegen voor attributen.
+Een paar dingen om hier op te merken, ten eerste wordt er een nieuwe namespace gemaakt, \inlinecode{CanvasHs}, dit is om shapes van Kinetic.JS te scheiden van onze eigen shapes. Daarnaast roepen we in de \inlinecode{___init} functie de constructor van \inlinecode{Kinetic.Shape} aan en voegt de \inlinecode{Kinetic.Util.extend} methode de attributen van het prototype van \inlinecode{Kinetic.Shape} in \inlinecode{CanvasHs.Arc} toe. De laatste twee functieaanroepen zijn om gemakkelijk getters en setters toe te voegen voor attributen.
 
 Voor het toevoegen van Shapes aan de JavaScript-zijde van Canvas.hs is het toevoegen van een case voor de nieuwe Shape aan het \inlinecode{switch}-statement in de \inlinecode{shapeFromData} functie in \emph{main.js} dus genoeg.
 
