--- a/Hoofdstukken/resultaten/performance_analyse.tex
+++ b/Hoofdstukken/resultaten/performance_analyse.tex
@@ -1,4 +1,4 @@
-\subsection{Performance analyse}
+\section{Performance analyse}
 Tijdens de ontwikkeling van de library is duidelijk geworden dat de performance van de geschreven programma's niet altijd optimaal is. Met name bij programma's die gebruik maken van \emph{timers} en bij programma's met grote \emph{shape grafen}.\todo{shape graph eerder introduceren}
 
 \todo{uitleggen}
