--- a/verslag.tex
+++ b/verslag.tex
@@ -167,9 +167,10 @@
 \input{./Hoofdstukken/organisatie.tex} 
 \input{./Hoofdstukken/requirements.tex} 
 \input{./Hoofdstukken/ontwerp.tex} 
-\input{./Hoofdstukken/resultaten.tex} 
+\input{./Hoofdstukken/testplan.tex} 
+\input{./Hoofdstukken/resultaten.tex}
+\input{./Hoofdstukken/evaluatie.tex} 
 \input{./Hoofdstukken/conclusie.tex}
-\input{./Hoofdstukken/evaluatie.tex}
 
 \newpage
 \input{./Hoofdstukken/appendices.tex}
