Kinetic.JS > KineticJS

--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -7,11 +7,11 @@ De meest belangrijke keuze die gemaakt is, is hoe er getekend wordt. Voorheen we
 
 De tegenhanger van deze methode is het absoluut tekenen van alle elementen. Voor het tekenen van kleine grafische interfaces is dit erg eenvoudig, teken gewoon een paar vierkantjes op arbitraire locaties op het canvas. Het nadeel van deze methode is dat als er meerdere vormen verplaatst moeten worden, dit stuk voor stuk moet gebeuren. Daarnaast is het invullen van een vorm een attribuut van de vorm, en daartoe is het niet mogelijk om meerdere elementen tegelijk van kleur te voorzien. Dat probleem zou opgelost kunnen worden door functies binnen de module te defini\"eren die op een lijst van shapes een translatie kan toepassen.
 
-Het tekenmodel van de Javascript library, Kinetic.JS tekent absoluut. Daarbij ondersteunt Kinetic.JS lagen die afzonderlijk geschaald kunnen worden. Er is besloten om het vertalen van de datastructuren te beperken. Daartoe is er eerst gekeken naar het doortrekken van het Kinetic.JS model naar het grafisch model van de Canvas.hs module. Vooral zodat er maar een echt datamodel zou zijn, en omdat de client dan zonder vertaling van datastructeren in elkaar gezet kon worden.
+Het tekenmodel van de Javascript library, KineticJS tekent absoluut. Daarbij ondersteunt KineticJS lagen die afzonderlijk geschaald kunnen worden. Er is besloten om het vertalen van de datastructuren te beperken. Daartoe is er eerst gekeken naar het doortrekken van het KineticJS model naar het grafisch model van de Canvas.hs module. Vooral zodat er maar een echt datamodel zou zijn, en omdat de client dan zonder vertaling van datastructeren in elkaar gezet kon worden.
 
-Uiteindelijk is het datamodel dat Canvas.hs aanbiedt een vermenging geworden tussen het datamodel van Kinetic.JS en van Gloss. De gebruiker tekent het overgrote gedeelte van de elementen absoluut, maar kan elementen groeperen in een \inlinecode{Container}. Binnen een \inlinecode{Container} is wederom een absoluut co"ordinatenstelsel, waar de gebruiker dan shapes in kan tekenen. Verder zijn er translaties mogelijk op shapes, zo kan de gebruiker een vorm roteren, en deze translaties werken ook op Containers. Wil de gebruiker bijvoorbeeld een knop met een pijltje draaien, dan kan deze in een container geplaatst worden, en in zijn geheel geroteerd worden.
+Uiteindelijk is het datamodel dat Canvas.hs aanbiedt een vermenging geworden tussen het datamodel van KineticJS en van Gloss. De gebruiker tekent het overgrote gedeelte van de elementen absoluut, maar kan elementen groeperen in een \inlinecode{Container}. Binnen een \inlinecode{Container} is wederom een absoluut co"ordinatenstelsel, waar de gebruiker dan shapes in kan tekenen. Verder zijn er translaties mogelijk op shapes, zo kan de gebruiker een vorm roteren, en deze translaties werken ook op Containers. Wil de gebruiker bijvoorbeeld een knop met een pijltje draaien, dan kan deze in een container geplaatst worden, en in zijn geheel geroteerd worden.
 
-Dit datamodel combineert dus de goede kanten van Kinetic.JS (het snel absoluut kunnen tekenen van vormen) met de voordelen van Gloss (het makkelijk kunnen verplaatsen, kleuren, roteren etc. van meerdere shapes).
+Dit datamodel combineert dus de goede kanten van KineticJS (het snel absoluut kunnen tekenen van vormen) met de voordelen van Gloss (het makkelijk kunnen verplaatsen, kleuren, roteren etc. van meerdere shapes).
 \todo{Afkortingen verwijderen?}
 
 Om deze keuze te illustreren volgt een ``Mickey Mouse'' vorm die gedraaid en gekleurd is. Hier is goed te zien hoe binnen de Container een absoluut co\"ordinatenstelsel heerst, terwijl erbuiten relatieve bewerkingen uitgevoerd worden.
@@ -25,7 +25,7 @@ Fill black $ Translate 100 100 $ Rotate 90 $ Container 200 200 [
 \end{lstlisting}
 
 \subsection{Protocol}
-Om het omschrijven van datastructuren in de client te beperken worden gegevens al klaargemaakt voor Kinetic.JS in de module. Het protocol dat de verbinding tussen de module en de client beschrijft heeft hierdoor sterke gelijkenissen met de Kinetic.JS API. Zo zijn de meeste JSON berichten die gestuurd worden door de Canvas.hs module één op één te teken op het canvas. Wel zijn er hier en daar kleine verschillen, JSON-keys die net anders zijn, of er zijn andere keys gebruikt om hetzelfde te modelleren. Een goed voorbeeld hiervan zijn de kleuren, kleuren worden opgestuurd als object met r, g , b en a waarden, maar Kinetic.JS verwacht een string met een kleur zoals hij geaccepteerd wordt door een webbrowser. De manier hoe Kinetic.JS omgaat met een kleur is een implementatiedetail dat niet thuis hoort in een protocol.
+Om het omschrijven van datastructuren in de client te beperken worden gegevens al klaargemaakt voor KineticJS in de module. Het protocol dat de verbinding tussen de module en de client beschrijft heeft hierdoor sterke gelijkenissen met de KineticJS API. Zo zijn de meeste JSON berichten die gestuurd worden door de Canvas.hs module één op één te teken op het canvas. Wel zijn er hier en daar kleine verschillen, JSON-keys die net anders zijn, of er zijn andere keys gebruikt om hetzelfde te modelleren. Een goed voorbeeld hiervan zijn de kleuren, kleuren worden opgestuurd als object met r, g , b en a waarden, maar KineticJS verwacht een string met een kleur zoals hij geaccepteerd wordt door een webbrowser. De manier hoe KineticJS omgaat met een kleur is een implementatiedetail dat niet thuis hoort in een protocol.
 
 \begin{lstlisting}[style=densecode, language=JavaScript]
 {"shape": {
