--- a/Hoofdstukken/evaluatie/organisatie.tex
+++ b/Hoofdstukken/evaluatie/organisatie.tex
@@ -3,11 +3,17 @@ De samenwerking is goed verlopen. Daarbij was de duidelijke structuur van zowel 
 
 \paragraph{Besprekingen} Elke samenkomst is er een kortdurende scrumbespreking gehouden. Bij de dagelijkse besprekingen werd vaak op details in gegaan, hierbij werden ontwerp beslissingen vaak genomen tijdens deze besprekingen. De besprekingen duurde hierdoor soms wat lang en werden zittend gehouden. Met zogenaamde \emph{stand-up meetings} zou dit voorkomen konden worden. Bij deze besprekingen staat iedereen en zit niemand voor zijn/haar computer. Hiermee konden de dagelijkse besprekingen wellicht wat vlotter verlopen.
 
+\todo{Willen we wel stand-up meetings bespreken?}
+
 Na aanvang van het project zijn er ook een aantal sprint besprekingen gehouden. Deze sprint besprekingen kwamen altijd na het gesprek met de opdrachtgever. Er bleek al snel dat onze afgesproken sprint van twee werken wel erg kort was om elke twee weken dat er samengekomen werd een nieuwe lange sprintbespreking te houden. Dus er werd uiteindelijk voor gekozen om de besprekingen met de projectgroep te beperkingen tot de dagelijkse korte besprekingen.
+
+\todo{Dit stuk is redelijk geschreven zonder naar de planning evaluatie te kijken, dit stuk meer integreren met de planning}
 
 \paragraph{Taken}
 Regelmatig werd de lijst met taken bijgewerkt. Taken bestonden uit: projecttaken, als het bijhouden van de planning; ontwikkeltaken, als het oplossen van bugs en het schrijven van nieuwe features; schrijftaken en overige taken. 
 Er is nu gewerkt in een projectgroep zonder direct uren budget, mocht dit het geval zijn zouden de inschattingsmethoden en burndown chart uit de scrum methode kunnen worden gebruikt. 
+
+\todo{Wat is dit en willen wij dit wel beschrijven? Dit weghalen en meer de focus houden op de dingen die er toe doen?}
 
 \paragraph{Pull requests}
 Bij aanvang van het project werken met een branching model en pull requests voor veel teamleden nieuw. Daarom is deze aanpak in de eerste fases niet altijd juist toegepast. Naarmate het project vorderde is steeds vaker met succes gebruik gemaakt van het branchingmodel en pull requests. Dit zorgde er voor dat teamleden elkaars code controleerde en dat er minder bugs zaten in de versies op de \inlinecode{dev} branch.
