Various fixes in verslag, vnml detailontwerp

--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -1,4 +1,4 @@
-\subsection{Module}
+\subsection{Module} \label{subsec:module}
 De module is de Haskell bibliotheek die de programmeur gebruikt om de grafische interface in de client te bedienen. Naar de programmeur is de gebruiksvriendelijkheid van de bibliotheek een van de belangrijkste overwegingen voor het ontwerp. De module bestaat uit een aantal onderdelen: de server die de statische bestanden serveert, de websocket server die de verbinding met de client onderhoudt, en de laag die de input en output verwerkt. \autoref{fig:architecture_module} geeft de architectuur weer van de module.
 
 \begin{figure}
