--- a/references.bib
+++ b/references.bib
@@ -83,5 +83,12 @@
 	title = "KineticJS",
 	month = "january",
 	year = "2014",
-	howpublished = {\url{http://jquery.com}}
+	howpublished = {\url{http://kineticjs.com/}}
+}
+@misc{Webscokets,
+	author = {Jasper Van der Jeugt and Siniša Biđin and Steffen Schuldenzucker and Alex Lang},
+	title = "Websockets",
+	month = "december",
+	year = "2013",
+	howpublished = {\url{http://hackage.haskell.org/package/websockets}}
 }
