--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -5,6 +5,16 @@ Bij het informatica-vak Functioneel Programmeren, gegeven aan de Universiteit Tw
 Om de focus binnen Functioneel Programmeren op de essentie te houden, is een grafische omgeving ontwikkeld op basis van de Gloss grafische library. De interface tussen de code van de student en de grafische interface is eenvoudig en bruikbaar, het bevat alleen een aantal nadelen. Het werkt niet goed op ieder platform, mist een aantal functionaliteiten en de prestatie is niet uitstekend. Vanuit de tekortkomingen van het oude systeem zijn requirements geformuleerd voor een nieuwe library die de oude op termijn zou moeten vervangen. In \autoref{hoofdstuk:requirements} wordt uitgebreid ingegaan op de requirements.
 In dit project is \emph{Canvas.hs} ontwikkeld; een omgeving die Haskell-gebruikers in staat stelt op eenvoudige wijze grafische elementen op een HTML5 canvas te presenteren. 
 
+Figuur \ref{fig:overzicht_canvas.hs} geeft een overzicht van de verschillende onderdelen van Canvas.hs.
+
+\begin{figure}
+\begin{center}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/architectuur_overzicht.pdf}
+\caption{Overzicht  van Canvas.hs}
+\label{fig:overzicht_canvas.hs}
+\end{center}
+\end{figure}
+
 \subsubsection{Canvas.hs}
 Canvas.hs is ontwikkeld met het oog op gebruiksgemak en eenvoud zonder de mogelijkheid tot uitbreiding en het toevoegen van geavanceerde functionaliteit onnodig te beperken.
 
